# X-Trader

./: .gitignore  lastcomm_process_demo.sh  rsync.sh
api/ctp/v6.7.2/win64/: thostmduserapi_se.lib  thosttraderapi_se.lib
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/backtest/: backtest_engine.cpp  backtest_engine.h
src/common/: algorithms.h  atr_indicator.h  long_ma_indicator.cpp  long_ma_indicator.h  short_ma_indicator.cpp  short_ma_indicator.h  structs.h
src/framework/: CMakeLists.txt  Makefile  cmake_install.cmake  frame.cpp  realtime.cpp  resample.cpp  strategy.cpp
src/include/: CurlSender.h  data_struct.h  define.h  frame.h  interface.h  realtime.h  resample.h  strategy.h
src/strategy/: CMakeCache.txt  CMakeLists.txt  Logger.h  Makefile  atr_channel_trading_strategy.h  cmake_install.cmake  decline_scalping.cpp  decline_scalping.h  decline_swing.cpp  decline_swing.h  dual_thrust_trading_strategy.cpp  dual_thrust_trading_strategy.h  high_low.cpp  high_low.h  main.cpp  market_correction.cpp  market_correction.h  market_making.cpp  market_making.h  order_flow.cpp  order_flow.h  order_imbalance.cpp  order_imbalance.h  rb_intraday_turtle.cpp  redis_client.cpp  redis_client.h  simp_turtle_trading_strategy.cpp  simp_turtle_trading_strategy.h  statistical_arbitrage.cpp  statistical_arbitrage.h  strategy_demo.cpp  strategy_demo.h  write_min_bars_strategy.cpp  write_min_bars_strategy.h
src/strategy/sim_strategys/: CMakeLists.txt  simp_turtle_trading_strategy.cpp  simp_turtle_trading_strategy.h
src/trade-core/: CMakeLists.txt  Makefile  cmake_install.cmake  interface.cpp
src/trade-core/market/: ctp_market.cpp  ctp_market.h
src/trade-core/trader/: ctp_trader.cpp  ctp_trader.h
src/utils/: cpu_utils.hpp  event_center.hpp  market_api.h  ringbuffer.hpp  trader_api.h
